@@ -90,6 +90,7 @@ production.
   for an IP address redirects to the contributions list for that IP
 * (bug 8859) Database::update should take array of tables too
 * (bug 19698) Inverse selection for Special:Contributions
+* (bug 24037) Add byte length of revision to Special:Contributions
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if
